<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imv_item"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/telai_foto"
        android:src="@drawable/imgbebe" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telai_nome" />

                <TextView
                    android:id="@+id/tv_item_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telai_peso" />

                <TextView
                    android:id="@+id/tv_item_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_idade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data de Nascimento:" />

                <TextView
                        android:id="@+id/tv_item_datanasc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telai_altura"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/tv_item_altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sexo:"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/tv_item_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</LinearLayout>