<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <TableLayout
            android:layout_width="107dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imvImagem"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_gravity="center"
                android:contentDescription="@string/telai_foto"
                android:onClick="carregarImagem"
                android:src="@drawable/imgbebe" />

        </TableLayout>

        <TableLayout
            android:layout_width="274dp"
            android:layout_height="206dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/telai_nome" />

                <EditText
                    android:id="@+id/etNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="3dp"
                    android:editable="true" />


            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/telai_peso" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etPeso"
                    android:layout_column="1"
                    android:editable="true" />

            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="Data de Nascimento" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etDataNasc" />

            </TableRow>


            <TableRow/>

            <TableRow>
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/telai_altura" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etAltura"
                    android:layout_column="1"
                    android:editable="true" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="Sexo:" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etSexo"
                    android:layout_column="1"
                    android:editable="true" />
            </TableRow>


        </TableLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvbebes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="#ffffff" />

</LinearLayout>